Take Two Update

--- a/site/Finals/styles/Exercise12b.css
+++ b/site/Finals/styles/Exercise12b.css
@@ -46,20 +46,48 @@ body{
 .header, .hero, .body,.sidebar,.footer{
     background-color: deepskyblue;
 }
+.hero,.ad{
+    height: 180px;
+}
+.hf,.hcta{
+    height:105px;
+}
+.body,.sidebar{
+    height: 250px;
+}
+.af,.al,.sf{
+    height: 180px;
+}
 
 @media screen and (max-width:1024px){
-
+    .col-md-12{width:100%}
+    .col-md-9{width:75%}
+    .col-md-6{width:50%;}
+    .col-md-3{width:25%}
+    .ad{height:50px;}
+    .GlobalNav{float:right;height:143px;}
+    .sidebar{float:right;}
 }
 @media screen and (max-width:768px){
-#wrapper{
-    width: 100% ;}   
-    .col-sm-12{
-        width:100%;
-    }
-    .col-sm-6{
-        width:50%;
-    }
+    #wrapper{width:100%;}   
+    .col-sm-12{width:100%;}
+    .col-sm-9{width:75%;}
+    .col-sm-7{width:58.33%;}
+    .col-sm-5{width:41.66%;}
+    .col-sm-6{width:50%;}
+    .col-sm-3{width:25%;}
+    .tools{height: right;}
+    .GlobalNav{float:left;}
+    .brand{height:143px;}
+    .hero,.ad{height:290px}
+    .sidebar{height:130px;}
+    .sf{height:50px;}
 }
-@media screen and (max-width:600px){
-    
+@media screen and (max-width:320px){
+    .col-xs-12{width:100%;}
+    *{float:left;}
+    .body{height: 350px;}
+    .brand,.GlobalNav,.hf,.ad,.af{height: 70px;}
+    .hcta{height: 145px;}
+    .al{height: 200px;}
 }
